updated kevin name

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-@realamritthapa @kevinphan @eyefremov @Nolan-Farley @karlamartinezdiaz
+@realamritthapa @keviphan @eyefremov @Nolan-Farley @karlamartinezdiaz
 
 .github/ @matt-laff @realamritthapa
 
