Have a sample calendar working & made alis

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,6 @@
-@realamritthapa @keviphan @eyefremov @Nolan-Farley @karlamartinezdiaz
+* @realamritthapa @keviphan @eyefremov @Nolan-Farley @karlamartinezdiaz
+
+src/components/calendar @realamritthapa
 
 .github/ @matt-laff @realamritthapa
 
