--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+	"composite": true,
+	"declaration": true,
+	"emitDeclarationOnly": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
