--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "i18next": "^24.2.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.8"
   },
