--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.11.0",
+    "@azure/msal-react": "^3.0.10",
     "@tailwindcss/vite": "^4.0.8",
     "i18next": "^24.2.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
@@ -36,5 +38,9 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
+  },
+  "engines": {
+    "react": "18.x",
+    "react-dom": "18.x"
   }
 }
