--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@azure/msal-browser": "^4.11.0",
-    "@azure/msal-react": "^3.0.10",
     "@tailwindcss/vite": "^4.0.8",
+    "firebase": "^11.7.1",
     "i18next": "^24.2.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
