--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@azure/msal-browser": "^4.11.0",
     "@azure/msal-react": "^3.0.10",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.8",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
