--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@azure/msal-browser": "^4.11.0",
-    "@azure/msal-react": "^3.0.10",
-    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.8",
+    "firebase": "^11.7.1",
+    "framer-motion": "^12.12.1",
+    "@react-google-maps/api": "^2.20.6",
     "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
     "moment": "^2.30.1",
@@ -24,6 +24,7 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
