--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "firebase": "^11.7.1",
     "framer-motion": "^12.12.1",
     "i18next": "^24.2.3",
+    "lucide-react": "^0.513.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
+    "pdfjs-dist": "4.8.69",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.8"
