--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.8",
+    "@tensorflow/tfjs": "^4.22.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.7.1",
     "framer-motion": "^12.12.1",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.513.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
+    "nsfwjs": "^4.2.1",
     "pdfjs-dist": "4.8.69",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
